--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -95,9 +95,6 @@
 
         import {getData} from "/js/api-function.js";
 
-        const a = console.log;
-
-
         const motherContainer = document.querySelector("#sort-container");
 
         const fragment = document.createDocumentFragment();
@@ -122,12 +119,12 @@
         getAllDepartments()
             .then(data => {
                 dpList = [...data];
-                a('dp list', dpList);
+
 
                     // let currentProject = dpList[i];
                     // Do something with currentProject
                     for (let i = 0; i < dpList.length; i++) {
-                        a(dpList[i])
+
                         let currentDp = dpList[i];
 
                         // Create the outermost <div> with class "col-lg-4 col-md-4" and style
@@ -183,7 +180,7 @@
                         seeMoreButton.href = "";
                         seeMoreButton.classList.add("btn", "btn-white", "text-secondary", "link-shadow");
                         seeMoreButton.setAttribute("dp-id", currentDp.id);
-                        a("Department Id : "+currentDp.id);
+                        console.log("Department Id : "+currentDp.id);
                         seeMoreButton.dataset.bsToggle = "modal";
                         seeMoreButton.dataset.bsTarget = "#department-details";
                         seeMoreButton.textContent = "See More";
@@ -191,23 +188,38 @@
                         seeMoreButton.addEventListener("click", function (e) {
 
                             getData(`/api/department/byId/${currentDp.id}`, (error, data) => {
-
                                 if(error) {
-                                    a(error)
+                                    console.error(error)
                                 } else {
                                     document.querySelector("#edit-department-name").value = data.name
                                 }
 
-                            })
-                            getData(`/api/user/count/departmentId/${currentDp.id}`,(error, data) => {
+                            });
+                            getData(`/api/user/count/departmentId/${currentDp.id}` , (error,data) => {
                                 if(error){
-                                    a(error)
-                                } else{
-                                    document.querySelector("totalMember").value = data
+                                    console.error(error)
+                                }else{
+                                    document.querySelector("#total-member").textContent = data
                                 }
                             })
-                            getData(`/api/`)
-                        })
+
+
+                            let seleced_department_head;
+                            getData(`/api/user/role/DEPARTMENT_HEAD/departmentId/${currentDp.id}`,(error,data) =>{
+                                console.log("Selecte Department Head : " + data)
+                                if(error){
+                                    console.error(error);
+                                }else{
+                                    document.querySelector("#department-head").textContent = data.name
+                                    seleced_department_head = data;
+                                    populateSelectBox(selected_department_head);
+                                }
+                            })
+                        });
+
+
+
+
 
 // Append elements to construct the structure
                         outerDiv.appendChild(cardDiv);
@@ -333,7 +345,7 @@
                                         <i class="bi bi-building-fill text-primary" style="font-size: 100px"></i>
                                     </div>
                                     <h4 style="margin-top: 10px">Department Head</h4>
-                                    <h5 id = "departmethead">Lai Kuan Lin</h5>
+                                    <h5 id="department-head"></h5>
 
                                 </div>
                             </div>
@@ -357,11 +369,11 @@
                                         <div class="row row-cols-lg-1 row-cols-sm-1 row-cols-md-1 row-cols-xl-2">
                                             <ul class="list-group col" style="padding: 0;">
                                                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                    Total Project<span class="badge bg-primary rounded-pill" id="totalProject"></span>
+                                                    Total Project<span class="badge bg-primary rounded-pill" id="total-project"></span>
                                                 </li>
                                                 <br/>
                                                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                    Total Member<span class="badge bg-primary rounded-pill" id="totalMember"></span>
+                                                    Total Member<span class="badge bg-primary rounded-pill" id="total-member"></span>
                                                 </li>
                                             </ul>
                                             <div class="col">
@@ -383,10 +395,8 @@
                                             <br/>
                                             <div>
                                                 <label for="departmenthead">Choose Deparment Head:</label><br/><br/>
-                                                <select name="departmenthead" class="form-control">
-                                                    <option value="volvo">Phyoe Wai Yan</option>
-                                                    <option value="saab">Zaw Lin Shein</option>
-                                                    <option value="opel">Thant Htet Ko</option>
+                                                <select name="departmenthead" id="departmenthead" class="form-control">
+
                                                 </select>
                                             </div>
                                             <br/>
@@ -412,43 +422,7 @@
     <!-- Back to Top -->
 </div>
 
-<!-- add department modal -->
-<div class="modal fade" id="add-department-modal" data-bs-keyboard="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-body">
-                <!-- TODO :: REDESIGN FORM FOR ADDING DEPARTMENT -->
-                <form>
-                    <h1 class="modal-title fs-5" style="
-                                    margin-bottom: 10px;
-                                    text-align: center;
-                                    color: #369;
-                                    font-weight: bold;
-                                ">Add Department</h1>
-                    <div>
-                        <label>Department Name</label> <br/><br/>
-                        <input type="text" class="form-control" name="departmentname" placeholder="Department Name"/>
-                    </div>
-                    <br/>
-                    <div>
-                        <label for="departmenthead">Choose Deparment Head:</label><br/><br/>
-                        <select name="departmenthead" id="departmenthead" class="form-control">
-                            <option value="volvo">Phyoe Wai Yan</option>
-                            <option value="saab">Zaw Lin Shein</option>
-                            <option value="opel">Thant Htet Ko</option>
-                        </select>
-                    </div>
-                    <br/>
 
-                    <button style="background-color: #369" type="submit" class="btn btn-primary py-2 w-100 mb-3">
-                        Add
-                    </button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- add department modal -->
 
 <!--    for select drop-drown-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
