--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -86,13 +86,10 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.2.0/tagify.css"
         />
 
-        <!-- <link
-            href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
-            rel="stylesheet"
-        /> -->
+        <!-- <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" /> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.2.0/tagify.min.js"></script>
         <link rel="stylesheet" href="/css/bootstrap.min.css" />
-        
+        <script src="/js/custome.js" defer></script>
         <script src="/js/getDataForProject.js" type="module" async></script>
         <script src="/js/currentLoginUser.js" type="module" async></script>
         <script type="module" defer>
@@ -111,9 +108,9 @@
 
             import { getUser } from "/js/currentLoginUser.js";
 
-            const loginUser = await getUser();
+            console.log(await getUser());
 
-            console.log(loginUser);
+            const loginUser = await getUser();
 
             if (loginUser.currentUser.role === "PROJECT_MANAGER") {
                 const addDepartmentButton = document.querySelector(
@@ -125,12 +122,13 @@
             }
 
             const clientList = await getClientList();
-
+            console.log(clientList);
             const clientSelect = document.querySelector("select[id='client']");
             clientList.forEach((client) => {
                 const option = document.createElement("option");
                 option.value = JSON.stringify(client);
                 option.textContent = client.name;
+                clientSelect.append(option);
             });
 
             const architectureInput = document.querySelector(
@@ -254,22 +252,33 @@
                 .addEventListener("submit", function (e) {
                     e.preventDefault();
 
-                    const name = document.querySelector("#client-name").value;
-                    const email = document.querySelector("#client-email").value;
-                    const phone = document.querySelector("#client-phone").value;
+                    let name = document.querySelector("#client-name").value;
+                    let email = document.querySelector("#client-email").value;
+                    let phone = document.querySelector("#client-phone").value;
 
-                    if (name === "" || email === "") {
+                    log(name, email, phone);
+
+                    if (name === "" || email === "" || phone === "") {
                         alert("client form empty");
                         return;
                     }
 
-                    sendData("/api/client/save", "POST", {
+                    const clientDto = {
                         name: name,
-                        phone: phone,
                         email: email,
-                    })
+                        phone: phone,
+                    };
+
+                    sendData("/api/client/save", "POST", clientDto)
                         .then((response) => {
                             console.log(response);
+                            const option = document.createElement("option");
+                            option.value = JSON.stringify(response);
+                            option.textContent = response.name;
+                            clientSelect.append(option);
+                            document.querySelector("#client-name").value = "";
+                            document.querySelector("#client-email").value = "";
+                            document.querySelector("#client-phone").value = "";
                         })
                         .catch((error) => {
                             console.error(
@@ -530,16 +539,6 @@
                     }
                 });
 
-            //$(document).ready(function () {
-            //    console.log("Document is ready!");
-
-            //    let a = $("#architectures-list, #deliverable").select2({
-            //        tags: true,
-            //        width: "100%",
-            //    });
-            //    console.log(a);
-            //});
-
             console.log("error");
 
             let quillEditors = document.querySelectorAll(
@@ -591,7 +590,7 @@
                     event.preventDefault(); // Prevent the form from submitting the traditional way
 
                     const projectName = $("#name").val();
-                    const client = JSON.parse("#client".val());
+                    const client = JSON.parse($("#client").val());
                     const startDate = new Date(
                         $("#start_date").val()
                     ).getTime();
@@ -606,48 +605,61 @@
 
                     for (let i = 0; i < architectures.length; i++) {
                         const ar = architectures[i];
-                        log(ar);
-                        log(ar.value);
                         newArc.push({ tech_name: ar.value });
                     }
+
+                    const result = [];
+
+                    newArc.forEach((newObj) => {
+                        const matchingObj = arcccList.find(
+                            (arccObj) => arccObj.tech_name === newObj.tech_name
+                        );
+                        if (!matchingObj) {
+                            result.push(newObj);
+                        } else {
+                            result.push(matchingObj);
+                        }
+                    });
                     // You may want to add some form validation here before sending the data
                     log(objective);
                     log(architectures);
                     log(newArc);
-                    log({
+                    const project = {
                         name: projectName,
-                        client: client,
+                        clientDto: client,
+                        duration:
+                            (new Date(endDate).getFullYear() -
+                                new Date(startDate).getFullYear()) *
+                                12 +
+                            (new Date(endDate).getMonth() -
+                                new Date(startDate).getMonth()),
                         start_date: startDate,
                         end_date: endDate,
                         background: background,
-                        architectureDto: arcccList.filter((obj) =>
-                            newArc
-                                .map((x) => x.tech_name)
-                                .includes(obj.tech_name)
-                        ),
+                        architectureDto: result,
                         system_outlines: systemOutlines,
                         deliverable: deliverable,
                         objective: objective,
+                    };
+                    log(project);
+                    //Perform the AJAX request
+                    $.ajax({
+                        url: "/api/project/save", // Replace with the actual URL for your project registration endpoint
+                        type: "POST",
+                        data: JSON.stringify(project),
+                        contentType: "application/json",
+                        success: function (data) {
+                            alert("Project registered successfully");
+                            // Reset the form if needed
+                            $("#validation-form")[0].reset();
+                        },
+                        error: function (data) {
+                            alert("Error registering project");
+                        },
                     });
-                    // Perform the AJAX request
-                    // $.ajax({
-                    //     url: '/api/project/save', // Replace with the actual URL for your project registration endpoint
-                    //     type: 'POST',
-                    //     data: JSON.stringify(),
-                    //     contentType: 'application/json',
-                    //     success: function (data) {
-                    //         alert('Project registered successfully');
-                    //         // Reset the form if needed
-                    //         $('#validation-form')[0].reset();
-                    //     },
-                    //     error: function (data) {
-                    //         alert('Error registering project');
-                    //     }
-                    // });
                 });
             });
         </script>
-        
     </head>
 
     <body>
@@ -923,7 +935,6 @@
                                             id="architectures"
                                             name="architectures"
                                             placeholder="add value"
-                                            value="css,html,javascript"
                                         />
                                     </div>
 
@@ -1781,7 +1792,6 @@
 
         <!-- jquery -->
         <script src="/js/jquery.3.7.1.min.js"></script>
-        <script src="/js/custome.js"></script>
 
         <!-- datable table -->
         <script src="/js/databales.min.js"></script>
@@ -1804,11 +1814,11 @@
         <script src="/js/main.js"></script>
         <script></script>
         <script src="/js/forprogresscircleiguess.js"></script>
+
         <!-- sort (department, project), form validation and search bar behavior are all here -->
 
         <!-- <script src="/js/bootstrap-select2.min.js"></script> -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script> -->
-        <!-- <script src="/js/progress-circle.min.js"></script> -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0/js/bootstrap-select.min.js"></script> -->
     </body>
 </html>
