--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -447,6 +447,30 @@
 
             motherContainer.appendChild(fragment);
 
+            $(".circle-progress").each(function () {
+                const minValue = $(this).attr("data-min-value");
+                const maxValue = $(this).attr("data-max-value");
+                const value = $(this).attr("data-value");
+                const type = $(this).attr("data-type");
+
+                if (value < 40) {
+                    this.classList.add("circle-progress-secondary");
+                } else if (value < 70) {
+                    this.classList.add("circle-progress-primary");
+                } else if (value > 69) {
+                    this.classList.add("circle-progress-success");
+                }
+
+                if (this.id !== "" && this.id !== null) {
+                    new CircleProgress("#" + this.id, {
+                        min: minValue,
+                        max: maxValue,
+                        value: value,
+                        textFormat: type,
+                    });
+                }
+            });
+
             const detailMoal = document.querySelector("#project-details");
 
             motherContainer.addEventListener("click", function (e) {
