Issue add and details

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -254,7 +254,7 @@
                                 alt
                                 style="width: 40px; height: 40px"
                             />
-                            <span class="d-none d-lg-inline-flex" id="username" sec:authentication="principal."></span
+                            <span class="d-none d-lg-inline-flex" id="username"></span
                             >
                         </a>
                         <div
